<resources>
    <string name="app_name">Barn Bakery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_add__shop">Add Shop Details</string>

    <string name="ADD_SHOP">Add Your Shop</string>
    <string name="SHOP_ID">Shop Id</string>
    <string name="SHOP_NAME">Shop Name</string>
    <string name="SHOP_CONTACT">Phone Number</string>
    <string name="SHOP_DISCRIPTION">Discription</string>
    <string name="SHOP_ADD_PHOTO">Add a photo</string>
    <string name="SHOP_ADDRESS">Address</string>
    <string name="ADD_FOOD">Add Food</string>
    <string name="FOOD_ID">Food Id</string>
    <string name="FOOD_NAME">Food Name</string>
    <string name="PRICE">Price</string>
    <string name="title_activity_add__food">Add Food</string>
    <string name="title_activity_shop__update">Shop Update</string>
    <string name="title_activity_sign_up">Register</string>
    <string name="SIGNUP_USERNAME">Username</string>
    <string name="login">Login</string>
    <string name="SIGNUP_NAME">Full Name</string>
    <string name="SIGNUP_EMAIL">Email</string>
    <string name="SIGNUP_ADDRESS">Address</string>
    <string name="SIGNUP_PHONE">Phone Number</string>
    <string name="SIGNUP_TYPE">Choose The Type</string>
    <string name="SIGNUP">Register</string>
    <string name="LOGIN">Login</string>
    <string name="ENTER_PASSWORD">Password</string>
    <string name="confirm_PASSWORD">Confirm password</string>
    <string name="RESET">Reset</string>
    <string name="SIGINUP">Sign Up</string>
    <string name="title_activity_user__feed">Shop Details List</string>
    <string name="PROFILE">Profile</string>
    <string name="title_activity_shop__profile">Shop Profile</string>
    <string name="title_activity_search_shop">Search Shop</string>
    <string name="SEARCH">Search</string>
    <string name="UPDATE_DELETE">UPDATE/DELETE</string>
    <string name="title_activity_update_delete_shop">Edit Shop</string>
    <string name="UPDATE">UPDATE</string>
    <string name="DELETE">DELETE</string>
    <string name="title_activity_profile_shop">Shop Profile</string>

    <string name="title_activity_food_feed">Food List</string>
    <string name="title_activity_food">Food</string>
    <string name="title_activity_foodprofile">Food Item</string>
    <string name="title_activity_food_edit">Food Edit</string>
    <string name="title_activity_food_feed_line">food_feed</string>
    <string name="SHOPFEEDNAVI">Shop List</string>
    <string name="FOODSEARCHNAVI">Food Search</string>
    <string name="ADDSHOPNAVI">Add Your Shop</string>
    <string name="HEAD">Barn Bakery</string>
    <string-array name="User_Levels">
        <item>Shop Owner</item>
        <item>Customers</item>
    </string-array>


</resources>
